[project]
name = "lunar-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt_toolkit",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "basedpyright",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
typeCheckingMode = "all"
reportExplicitAny = false
