[project]
name = "lunar-engine"
version = "0.4.0"
description = 'A fully type-safe, DX-first, "shell-like" CLI tool framework, for the newest versions of Python.'
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt_toolkit",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "basedpyright",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
typeCheckingMode = "all"
reportExplicitAny = false
reportUnusedCallResult = false
